--- a/c04-glwe-modulus-switch.tex
+++ b/c04-glwe-modulus-switch.tex
@@ -72,8 +72,8 @@ $\hat{b} = \sum\limits_{i=0}^{k-1}\hat{a}_i \cdot s_i + \hat{\Delta} m + \hat{e}
 
 $ $
 
-\textbf{\underline{Proof}}
-
+%\textbf{\underline{Proof}}
+\begin{myproof}
 \begin{enumerate}
 \item Note the followings: 
 
@@ -124,12 +124,12 @@ $\hat{b} = \sum\limits_{i=0}^{k-1}\hat{a}_is_i + \hat{\Delta} m + \hat{e} + \eps
 
 Thus, $(\hat{a}_0, \hat{a}_1, \gap{$\cdots$}, \hat{b}) = \textsf{LWE}_{{S},\sigma}(\hat{\Delta}  m)$, decrypting which will give us $m$.
 
-\begin{flushright}
-\qedsymbol{} 
-\end{flushright}
+%\begin{flushright}
+%\qedsymbol{} 
+%\end{flushright}
 
 \end{enumerate}
-
+\end{myproof}
 
 \subsubsection{Example}
 
