--- a/c04-glwe-modulus-switch.tex
+++ b/c04-glwe-modulus-switch.tex
@@ -131,7 +131,7 @@ Thus, $(\hat{a}_0, \hat{a}_1, \gap{$\cdots$}, \hat{b}) = \textsf{LWE}_{{S},\sigm
 \end{enumerate}
 \end{myproof}
 
-\subsubsection{Example}
+\subsection{Example}
 
 Suppose we have the following LWE setup:
 
@@ -196,7 +196,7 @@ $ $
 $m = \left \lceil \dfrac{9}{\hat \Delta} \right \rfloor = \left \lceil \dfrac{9}{8} \right \rfloor = 1$, which is correct.
 
 
-\subsubsection{Discussion}
+\subsection{Discussion}
 \label{subsubsec:modulus-switch-lwe-discuss}
 
 \begin{figure}[h!]
