--- a/c02-glwe-add-plain.tex
+++ b/c02-glwe-add-plain.tex
@@ -56,6 +56,6 @@ $= \textsf{GLWE}_{S, \sigma}(\Delta (M + \Lambda))$
 \end{myproof}
 
 
-\subsubsection{Discussion}
+\subsection{Discussion}
 
 \para{Noise Growth: } Note that after decryption, the original ciphertext $C +\Lambda$'s noise $E$ stays the same as before. This means that ciphertext-to-plaintext multiplication does not increase the noise level.
