LWE modulus switch: bug correction regarding k

--- a/00-main.tex
+++ b/00-main.tex
@@ -297,7 +297,7 @@ Please report any bugs or suggestions regarding the draft to the \href{https://g
 
 
 \subsubsection*{Acknowledgments}
-Special thanks go to the following individuals: Robin Geelen (KU Leuven), for his thoughtful and dedicated feedback; Yongwoo Lee (Inha University), for his general advice; and Tianjian Yang (Peking University), for correcting numerous typos and other errors in the draft.
+Special thanks go to the following researchers: Robin Geelen (KU Leuven), for his thoughtful and dedicated feedback; Yongwoo Lee (Inha University), for his general advice; and Tianjian Yang (Peking University), for correcting numerous typos and other errors in the draft.
 
 \thispagestyle{empty}
 
