Fix for the negacyclic convolution formula

--- a/00-main.tex
+++ b/00-main.tex
@@ -249,7 +249,11 @@
 
 \begin{document}
 \title{\Huge{\textbf{The Beginner's Textbook}}\\ \Huge{\textbf{for Fully Homomorphic Encryption}}}
-\author{\textbf{}\\{LG Electronics Inc.}}%\\\texttt{\small{hajoon.ko@lge.com}}}
+\author{
+        \textbf{Ronny Ko} \thanks{\textbf{Acknowledgments:}  
+        \text{Robin Geelen} (KU Leuven);  
+        \text{Tianjian Yang} (Peking University); \text{Yongwoo Lee} (Inha University).}
+        \\{LG Electronics Inc.}}%\\\texttt{\small{hajoon.ko@lge.com}}}
 \date{January 1, 2025}
 
 
@@ -291,13 +295,13 @@ $ $
 
 %$ $
 
-This book is available both as an \href{https://arxiv.org/abs/2503.05136}{\textbf{arXiv PDF}} and on a \href{https://fhetextbook.github.io} {\textbf{tentative website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{make4ht}). 
+This book is available both as an \href{https://arxiv.org/abs/2503.05136}{\textbf{arXiv PDF}} and on an \href{https://fhetextbook.github.io} {\textbf{auto-generated website}} (powered by \href{https://www.kodymirus.cz/overleaf-html-sample/main.html}{make4ht}). 
 Please report any bugs or suggestions regarding the draft to the \href{https://github.com/fhetextbook/fhe-textbook/issues}{\textbf{Issues Board}}. As this book is an evolving open project, we welcome FHE experts to join us as collaborators and help expand the draft.
 
 
 
 \subsubsection*{Acknowledgments}
-Special thanks go to the following researchers: Robin Geelen (KU Leuven), for his thoughtful and dedicated feedback; Yongwoo Lee (Inha University), for his general advice; and Tianjian Yang (Peking University), for correcting numerous typos and other errors in the draft.
+Special thanks go to the following researchers: Robin Geelen (KU Leuven, \href{mailto:robin.geelen@esat.kuleuven.be}{robin.geelen@esat.kuleuven.be}), for his thoughtful and dedicated feedback; Tianjian Yang (Peking University), for correcting numerous typos and other errors in the draft; and Yongwoo Lee (Inha University, \href{mailto:yongwoo@inha.ac.kr}{yongwoo@inha.ac.kr}), for his general advice.
 
 \thispagestyle{empty}
 
