--- a/c05-glwe-key-switching.tex
+++ b/c05-glwe-key-switching.tex
@@ -3,7 +3,7 @@
 
 $ $
 
-Key switching is a process to change a GLWE ciphertext's secret key from $S$ to a new key $S'$. This is equivalent to converting a ciphertext $\textsf{GLWE}_{S,\sigma}(\Delta M)$ into a new ciphertext $\textsf{GLWE}_{S',\sigma}(\Delta M)$. 
+Key switching is a process to change a GLWE ciphertext's secret key from $S$ to a new key $S'$ without decrypting the ciphertext. This is equivalent to converting a ciphertext $\textsf{GLWE}_{S,\sigma}(\Delta M)$ into a new ciphertext $\textsf{GLWE}_{S',\sigma}(\Delta M)$. 
 
 $ $
 
