--- a/c05-glwe-key-switching.tex
+++ b/c05-glwe-key-switching.tex
@@ -62,7 +62,7 @@ $ =  A_{\langle i,1 \rangle} \cdot \textsf{GLWE}_{S', \sigma} \left (
  \dfrac{q}{\beta^1}S_i \right ) + A_{\langle i,2 \rangle} \cdot \textsf{GLWE}_{S', \sigma} \left ( 
  \dfrac{q}{\beta^2}S_i \right ) + \gap{$\cdots$} + A_{\langle i,l \rangle} \cdot \textsf{GLWE}_{S', \sigma} \left ( 
  \dfrac{q}{\beta^l}S_i \right ) $ 
-\textcolor{red}{ \# where each \textsf{RLWE} ciphertext is an encryption of $S_i\dfrac{q}{\beta}, S_i\dfrac{q}{\beta^2}, \cdots, S_i\dfrac{q}{\beta^l}$ as plaintext with the plaintext scaling factor 1}
+\textcolor{red}{ \# where each \textsf{GLWE} ciphertext is an encryption of $S_i\dfrac{q}{\beta}, S_i\dfrac{q}{\beta^2}, \cdots, S_i\dfrac{q}{\beta^l}$ as plaintext with the plaintext scaling factor 1}
 
 $ $
  
