--- a/00-main.tex
+++ b/00-main.tex
@@ -250,9 +250,9 @@
 \begin{document}
 \title{\Huge{\textbf{The Beginner's Textbook}}\\ \Huge{\textbf{for Fully Homomorphic Encryption}}}
 \author{
-        \textbf{Ronny Ko} \thanks{\textbf{Acknowledgments:}  
-        \text{Robin Geelen} (KU Leuven);  
-        \text{Tianjian Yang} (Peking University); \text{Yongwoo Lee} (Inha University).}
+        \textbf{Ronny Ko} \thanks{\large \textit{\textbf{Acknowledgments}:}  
+        \textbf{Robin Geelen} (KU Leuven);  
+        \textbf{Tianjian Yang} (Peking University); \textbf{Yongwoo Lee} (Inha University).}
         \\{LG Electronics Inc.}}%\\\texttt{\small{hajoon.ko@lge.com}}}
 \date{January 1, 2025}
 
